--- a/modules/server/src/main/resources/vm/node/manage/console.vm
+++ b/modules/server/src/main/resources/vm/node/manage/console.vm
@@ -63,11 +63,14 @@
         <div class="layui-row">
             <!-- layui-elem-quote -->
             #if($logSize)
-                <button id="export" class="layui-btn layui-btn-sm">导出日志</button>
-                <button id="resetLog" class="layui-btn layui-btn-sm">重置日志(<span id="logSize">$logSize</span>)</button>
-            #end
-            #if($logBack)
-                <button id="logBack" class="layui-btn layui-btn-sm">备份列表</button>
+                #if($logSize.logSize)
+                    <button id="export" class="layui-btn layui-btn-sm">导出日志</button>
+                    <button id="resetLog" class="layui-btn layui-btn-sm">重置日志(<span id="logSize">$logSize.logSize</span>)
+                    </button>
+                #end
+                #if($logSize.logBack)
+                    <button id="logBack" class="layui-btn layui-btn-sm">备份列表</button>
+                #end
             #end
 
             <a href="javascript:;" class="btn-op layui-btn  layui-btn-sm" op="start">启动</a>
@@ -247,8 +250,10 @@
                 },
                 success: function (data) {
                     if (200 == data.code) {
-                        $("#logSize").html(data.data);
-                        $("#resetLog").show();
+                        if (data.data && data.data.logSize) {
+                            $("#logSize").html(data.data.logSize);
+                            $("#resetLog").show();
+                        }
                     } else {
                         $("#resetLog").hide();
                         layer.msg(data.msg);
@@ -258,7 +263,9 @@
         }
 
         $('#export').on('click', function () {
-            location.href = "./log/export.html?id=$!projectInfo.id";
+            var url = "./log/export.html?id=$!projectInfo.id";
+            url = appendNodeId(url);
+            location.href = url;
         });
 
         $("#resetLog").on('click', function () {
@@ -283,7 +290,7 @@
         });
 
         $("#logBack").on('click', function () {
-            layer.open({
+            layerOpen({
                 type: 2,
                 title: '备份列表',
                 shade: 0.8,
