--- a/modules/server/src/main/resources/vm/node/manage/internal.vm
+++ b/modules/server/src/main/resources/vm/node/manage/internal.vm
@@ -25,8 +25,8 @@
 
 <body>
 <div>
-    <a class="layui-btn  layui-btn-sm layui-btn-normal" href="/manage/stack?tag=$!tag">导出堆栈信息</a>
-    <a class="layui-btn  layui-btn-sm layui-btn-normal" href="/manage/ram?tag=$!tag">导出内存信息</a>
+    <button op="a" class="layui-btn  layui-btn-sm layui-btn-normal" href="./stack?tag=$!tag">导出堆栈信息</button>
+    <button op="a" class="layui-btn  layui-btn-sm layui-btn-normal" href="./ram?tag=$!tag">导出内存信息</button>
 </div>
 <div class="info">
     <label>系统内存</label>
@@ -48,20 +48,20 @@
         </tr>
         </thead>
         <tbody>
-            #if($item)
+            #if($data.process)
             <tr>
-                <td>$!item.pid</td>
-                <td>$!item.command</td>
-                <td>$!item.user</td>
-                <td>$!item.res</td>
-                <td>$!item.status</td>
-                <td>$!item.cpu</td>
-                <td>$!item.mem</td>
-                <td>$!item.time</td>
-                <td>$!item.pr</td>
-                <td>$!item.ni</td>
-                <td>$!item.virt</td>
-                <td>$!item.shr</td>
+                <td>$!data.process.pid</td>
+                <td>$!data.process.command</td>
+                <td>$!data.process.user</td>
+                <td>$!data.process.res</td>
+                <td>$!data.process.status</td>
+                <td>$!data.process.cpu</td>
+                <td>$!data.process.mem</td>
+                <td>$!data.process.time</td>
+                <td>$!data.process.pr</td>
+                <td>$!data.process.ni</td>
+                <td>$!data.process.virt</td>
+                <td>$!data.process.shr</td>
             </tr>
             #else
             <tr>
@@ -72,7 +72,7 @@
     </table>
 </div>
 
-    #if($beanMem)
+    #if($data.beanMem)
     <div class="info">
         <label> jvm内存</label>
         <table class="layui-table" style="margin-top: 10px">
@@ -89,13 +89,13 @@
             </thead>
             <tbody>
             <tr>
-                <td>$!beanMem.heapUsed</td>
-                <td>$!beanMem.heapProportion</td>
-                <td>$!beanMem.heapCommitted</td>
-                <td>$!beanMem.nonHeapUsed</td>
-                <td>$!beanMem.nonHeapProportion</td>
-                <td>$!beanMem.nonHeapCommitted</td>
-                <td>$!beanMem.mount</td>
+                <td>$!data.beanMem.heapUsed</td>
+                <td>$!data.beanMem.heapProportion</td>
+                <td>$!data.beanMem.heapCommitted</td>
+                <td>$!data.beanMem.nonHeapUsed</td>
+                <td>$!data.beanMem.nonHeapProportion</td>
+                <td>$!data.beanMem.nonHeapCommitted</td>
+                <td>$!data.beanMem.mount</td>
             </tr>
             </tbody>
         </table>
@@ -119,19 +119,19 @@
         </tr>
         </thead>
         <tbody>
-            #if($port)
-                #foreach($item in $!port)
-                <tr>
-                    <td>$!item.name</td>
-                    <td>$!item.protocol</td>
-                    <td>$!item.local</td>
-                    <td>$!item.foreign</td>
-                    <td>$!item.status</td>
-                    <td>$!item.receive</td>
-                    <td>$!item.send</td>
-                </tr>
-                #end
-            #else
+            #foreach($item in $data.netstat)
+                #set($hashNetStat=true)
+            <tr>
+                <td>$!item.name</td>
+                <td>$!item.protocol</td>
+                <td>$!item.local</td>
+                <td>$!item.foreign</td>
+                <td>$!item.status</td>
+                <td>$!item.receive</td>
+                <td>$!item.send</td>
+            </tr>
+            #end
+            #if(!$hashNetStat)
             <tr>
                 <td colspan=7 style="text-align:center">无数据</td>
             </tr>
