--- a/modules/server/src/main/resources/vm/node/index.vm
+++ b/modules/server/src/main/resources/vm/node/index.vm
@@ -46,87 +46,141 @@
 </head>
 
 <body class="layui-layout-body">
-<div class="layui-layout layui-layout-admin">
-    <div class="layui-header">
-        <form class="layui-form" action="">
-            <div class="layui-logo" title="版本时间:$!jpomManifest.timeStamp，进程ID:$!jpomManifest.pid">
-                $node.name #if($jpomManifest)<font style="font-size: 10px;">($jpomManifest.version)</font>#end
-            ##                <div class="layui-form-item" style="margin-top: 10px;">
-            ##                    <label class="layui-form-label">节点列表</label>
-            ##                    <div class="layui-input-block">
-            ##                        <select name="city" lay-verify="required">
-            ##                            #foreach($itemNode in $array)
-            ##                                <option value="$itemNode.id">$itemNode.name</option>
-            ##                            #end
-            ##                        </select>
-            ##                    </div>
-            ##                </div>
-            ##                </span>
-            </div>
-        </form>
-        <ul class="layui-nav layui-layout-left">
+    #if($installed)
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <form class="layui-form" action="">
+                <div class="layui-logo" title="版本时间:$!jpomManifest.timeStamp，进程ID:$!jpomManifest.pid">
+                    $node.name #if($jpomManifest)<font style="font-size: 10px;">($jpomManifest.version)</font>#end
+                </div>
+            </form>
+            <ul class="layui-nav layui-layout-left">
 
-        </ul>
-        #parse("./common/userHead.vm")
-    </div>
-    <div class="layui-side layui-bg-black">
-        <div class="layui-side-scroll">
-            <ul class="layui-nav layui-nav-tree" lay-filter="menu">
-                <li class="layui-nav-item layui-this">
-                    <a href="javascript:;" data-options="{'id':'welcome', 'title':'首页', 'url':'./welcome'}">首页</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="javascript:;" data-options="{'id':'manage', 'title':'项目管理', 'url':'./manage/projectInfo'}">项目管理</a>
-                </li>
-                #if($user.isManage())
-                    <li class="layui-nav-item">
-                        <a href="javascript:;"
-                           data-options="{'id':'nginx', 'title':'nginx管理', 'url':'./system/nginx/list.html'}">nginx管理</a>
-                    </li>
-                #end
-                #if($user.isSystemUser())
-                    <li class="layui-nav-item">
-                        <a href="javascript:;"
-                           data-options="{'id':'whitelistDirectory', 'title':'白名单目录', 'url':'./system/whitelistDirectory'}">白名单目录</a>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;"
-                           data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'./system/alioss'}">阿里云OSS</a>
-                    </li>
-                #end
             </ul>
+            #parse("./common/userHead.vm")
         </div>
-    </div>
-    <div class="layui-body" style="overflow: hidden;">
-        <div class="layui-tab layui-tab-card" lay-allowClose="true" lay-filter="mainTabs">
-            <ul class="layui-tab-title">
-                <li class="layui-this" lay-id="tab_welcome">首页</li>
-            </ul>
-            <div class="layui-tab-content">
-                <div class="layui-tab-item layui-show">
-                    <iframe src="./welcome?nodeId=$!nowNodeItem.id" frameborder="0" class="custom-iframe"></iframe>
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+                <ul class="layui-nav layui-nav-tree" lay-filter="menu">
+                    <li class="layui-nav-item layui-this">
+                        <a href="javascript:;" data-options="{'id':'welcome', 'title':'首页', 'url':'./welcome'}">首页</a>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"
+                           data-options="{'id':'manage', 'title':'项目管理', 'url':'./manage/projectInfo'}">项目管理</a>
+                    </li>
+                    #if($user.isManage())
+                        <li class="layui-nav-item">
+                            <a href="javascript:;"
+                               data-options="{'id':'nginx', 'title':'nginx管理', 'url':'./system/nginx/list.html'}">nginx管理</a>
+                        </li>
+                    #end
+                    #if($user.isSystemUser())
+                        <li class="layui-nav-item">
+                            <a href="javascript:;"
+                               data-options="{'id':'whitelistDirectory', 'title':'白名单目录', 'url':'./system/whitelistDirectory'}">白名单目录</a>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;"
+                               data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'./system/alioss'}">阿里云OSS</a>
+                        </li>
+                    #end
+                </ul>
+            </div>
+        </div>
+        <div class="layui-body" style="overflow: hidden;">
+            <div class="layui-tab layui-tab-card" lay-allowClose="true" lay-filter="mainTabs">
+                <ul class="layui-tab-title">
+                    <li class="layui-this" lay-id="tab_welcome">首页</li>
+                </ul>
+                <div class="layui-tab-content">
+                    <div class="layui-tab-item layui-show">
+                        <iframe src="./welcome?nodeId=$!nowNodeItem.id" frameborder="0" class="custom-iframe"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    #else
+    <div class="layui-carousel" id="div-carousel" style="width: 100%; height: 100%; position: fixed; z-index: 0;">
+        <div carousel-item>
+            <div><img src="$!jpomProxyPath/static/backgrounds/1.jpg?v=$staticCacheTime" style="width: 100%;"></div>
+        </div>
+    </div>
+    <div class="layui-container" style="margin-top: 150px;">
+        <div class="layui-row">
+            <div class="layui-col-md4 layui-col-md-offset4">
+                <form class="layui-form" method="post" action="">
+                    <div class="layui-form-item" style="color: #FFF; font-size: 24px;text-align: center;">
+                        <span>初始化节点（$node.name）</span>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-input-block" style="margin-left: 0px;">
+                                <textarea name="project" lay-verify="required"
+                                          placeholder="请输入项目存放路径白名单，回车支持输入多个路径"
+                                          class="layui-textarea"></textarea>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-input-block" style="margin-left: 0px;">
+                            <button class="layui-btn layui-btn-danger" lay-submit lay-filter="from_node"
+                                    style="width: 100%">确定
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    #end
     #parse("./common/sha1.vm")
 </body>
-
 <script type="text/javascript">
     function loadSuccess() {
-        // 左侧导航条事件
-        element.on('nav(menu)', function (data) {
-            var dataJSON = $(data.context).attr("data-options");
-            var options;
-            try {
-                options = JSON.parse(dataJSON);
-            } catch (e) {
-                options = eval('(' + dataJSON + ')');
-            }
+        #if($installed)
+            // 左侧导航条事件
+            element.on('nav(menu)', function (data) {
+                var dataJSON = $(data.context).attr("data-options");
+                var options;
+                try {
+                    options = JSON.parse(dataJSON);
+                } catch (e) {
+                    options = eval('(' + dataJSON + ')');
+                }
 
-            tabChange(options);
-        });
+                tabChange(options);
+            });
+        #else
+            layui.use(['carousel'], function () {
+                var carousel = layui.carousel;
+                carousel.render({
+                    elem: '#div-carousel',
+                    width: '100%',
+                    height: '100%',
+                    anim: 'fade',
+                    arrow: 'none',
+                    indicator: 'none'
+                });
+                //
+                form.on('submit(from_node)', function (data) {
+                    console.log(data);
+                    loadingAjax({
+                        url: './install_node.json',
+                        data: data.field,
+                        success: function (data) {
+                            layer.msg(data.msg);
+                            if (200 == data.code) {
+                                setTimeout(function () {
+                                    window.location.reload();
+                                }, 1500);
+                            }
+                        }
+                    });
+                    return false;
+                });
+            });
+        #end
     }
 </script>
+
 </html>
